--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "monolog/monolog": "^1.21",
         "doctrine/dbal": "^2.5",
         "league/plates": "^3.1",
-        "robmorgan/phinx": "^0.4.5",
+        "robmorgan/phinx": "^0.8.0",
         "league/flysystem": "^1.0",
         "simple-validator/simple-validator": "dev-master",
-      "behat/behat": "~2.5"
+      "behat/behat": "~2.5",
+      "fzaninotto/faker": "^1.6"
     } 
 }
